# docker-deploy

./: .gitignore  LICENSE  README.md  backend_map_lib.py  config_lib.py  deploy.py  docker.py  pyproject.toml
docker_deploy/: __init__.py  __main__.py  ansible_deploy.py  backend_map_lib.py  config_lib.py  deploy.py  docker.py  registry.py
docker_deploy/ansible_deploy/: __init__.py  task.py
testing/: .gitignore
testing/docker/: docker-compose.yml
testing/docker/webserver/: Dockerfile  index.html  server.py
